objects/ER_Employee__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>ER_Agreement__c</referenceTo>
        <relationshipName>Restricted_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_Manager__c</fullName>
        <label>Employee Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Manager_login__c</fullName>
        <formula>Employee__r.WD_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Manager login</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Permission_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employee Permission Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Restricted_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Restriction End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Additional_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Additional Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Email_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Email Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Permission_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Permission Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restriction_Start_Date__c</fullName>
        <formula>Agreement__r.Restriction_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Restriction Start Date</label>
        <type>Date</type>
    </fields>
    <label>Restricted Employee</label>
    <nameField>
        <displayFormat>Employee {0}</displayFormat>
        <label>Restricted Employee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Restricted Employees</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>